--- a/lazyloading.html
+++ b/lazyloading.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="http://kejian.jirengu.com/static/js/jquery-1.11.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <title>lazy-loading</title>
     <style>
         ul,
